# drive-organizer

./: .env.example  .gitignore  LICENSE  MANUALE.md  PIPELINE_ALGORITHM.md  README.md  _fix_estero.py  configure.bat  drive_organizer.spec  install.bat  install_dev.bat  launch.bat  main.py  pyproject.toml  requirements.txt  ruff.toml  uninstall.bat  web.py
docs/: MANUALE_LINUX.md  MANUALE_MACOS.md  MANUALE_WINDOWS.md  PROPOSTA_COMMERCIALE.md
drive_organizer/: config.py  content_extractor.py  duplicate_finder.py  executor.py  exporter.py  logging_config.py  planner.py  rename_executor.py  renamer.py  rollback.py  wizard.py
scripts/: CATALOG.md  check_cv_formazione.py  cleanup_empty_subfolders.py  count_old_folders.py  empty_trash.py  fix_documenti_vari.py  fix_dv3.py  folder_stats.py  full_drive_organize.py  install-chromebook.sh  map_old_subfolders.py  move_py_files.py  nest_archivio.py  nest_documenti.py  nest_documenti2.py  nest_legale_fiscale.py  nest_veicoli.py  nest_workflow.py  nested_organizer.py  rename_all_batches.ps1  restructure_casa.py  restructure_scuola_viaggi.py  scan_archivio.py  swap_00_02.py  swap_folders.py  test_py.py  trash_batch2.py  uninstall-linux.sh
taxonomies/: taxonomy_ai_personalizzata.json  taxonomy_custom.json  taxonomy_emoji.json  taxonomy_lavoro.json  taxonomy_ottimizzata.json  taxonomy_personale.json  taxonomy_personale_01_04.json  taxonomy_personale_scolastico.json  taxonomy_scolastico_docente.json  taxonomy_v3_integrated.json  taxonomy_v3_opus.json
templates/: index.html
tests/: conftest.py  helpers.py  test_cache.py  (+7 more)
(+69 files in other folders)
