[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drive-organizer"
version = "1.0.0"
description = "Riorganizza Google Drive con AI locale + cloud (cascade: Ollama → Haiku → Opus)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Gianluca Demontis", email = "giandemoncell@gmail.com" }]
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
    "anthropic>=0.105.2",
    "google-genai>=2.7.0",
    "ollama>=0.6.2",
    "rich>=15.0.0",
    "click>=8.4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "httpx>=0.28.1",
    "flask>=3.0.0",
]

[project.scripts]
drive-organizer = "main:cli"

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["drive_organizer*"]
